--- a/react/package.json
+++ b/react/package.json
@@ -22,14 +22,11 @@
   },
   "homepage": "https://github.com/maledr5/bootstraps#readme",
   "dependencies": {
-    "ajv": "^6.6.2",
+    "ajv": "^6.9.1",
     "axios": "^0.16.2",
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.7",
     "file-loader": "^0.11.2",
+    "firebase": "^5.8.3",
     "jquery": "^3.2.1",
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
@@ -40,10 +37,15 @@
     "react-slick": "^0.14.11",
     "style-loader": "^0.18.2",
     "url-loader": "^0.6.2",
-    "webpack": "^4.28.3",
-    "webpack-dev-server": "^3.1.14"
+    "webpack": "^4.29.4"
   },
   "devDependencies": {
-    "webpack-cli": "^3.2.0"
+    "webpack-cli": "^3.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.3.1",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.5",
+    "@babel/plugin-proposal-class-properties": "^7.3.3",
+    "webpack-dev-server": "^3.1.14"
   }
 }
